--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -16,6 +16,9 @@
             <h3 class="text-center" th:text="|Cena ${item.price}zł|">Cena: 25zł</h3>
             <p class="text-justify" th:text="${item.description}">Pizza Margherita to klasyka włoskiej kuchni. W naszym wydaniu serwujemy pizzę na cienkim cieście z
                 ręcznie przygotowanym sosem pomidorowym i oryginalnym serem mozarella</p>
+            <a href="#" th:href="@{/zamowienie/dodaj(itemId=${item.id})}" class="btn btn-primary d-block">
+                Dodaj do zamówienia
+            </a>
         </div>
     </div>
 </div>
